<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="PID" Id="{333d4c1e-f03b-4c4d-9c8a-32d00910e4bb}">
    <Declaration><![CDATA[TYPE PID :
STRUCT
	
Aktiv:					BOOL:=1; 		//TRUE wenn Regler aktiv ist
Restart:				BOOL:=0;		//Startet den Regler neu
ManuellerModus: 		BOOL:=0;		//Auf True, um manuell den Sollwert mittels ManuellerWert einzustellen
ManuellerWert: 			REAL:= 0;		//Manueller Sollwert
Einschalttoleranz : 	REAL:= 0;		//Verhindert ein ständiges EIN/AUS-schalten des Reglers. SUP legt fest ab welcher Regeldifferenz der Regler einschaltet
Offset: 				REAL:= 0;		//Offset für den Ausgang
LimitErreicht:			BOOL;			//TRUE, wenn der Ausgang ein Limit erreicht hat


Kp:REAL:=0;		//Proportionaler Anteil
I:REAL:=0;		//Imaginärer Anteil
D:REAL:=0;		//Differentierender Anteil
Ta:REAL:=0;		//Taktzeit

w:REAL:=0;		//Sollwert
x:REAL:=0;		//Stellgröße
y:REAL:=0;		//Ausgang

e:REAL:=0;		//Fehler
e_sum:REAL:=0;	//Fehlersumme
e_alt:REAL:=0;  //Fehler N-1

LimitOben: REAL:=0; //Obere Schranke des Ausgangssignals
LimitUnten: REAL:=0; //untere Schranke des Ausgangssignals

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>