<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="PID" Id="{333d4c1e-f03b-4c4d-9c8a-32d00910e4bb}">
    <Declaration><![CDATA[TYPE PID :
STRUCT
	
Aktiv:BOOL:=1; //Ist der Regler aktiv

Kp:REAL:=0;	//Proportionaler Anteil
I:REAL:=0;		//Imaginärer Anteil
D:REAL:=0;		//Differentierender Anteil
Ta:REAL:=0;	//Taktzeit

w:REAL:=0;		//Sollwert
x:REAL:=0;		//Stellgröße
y:REAL:=0;		//Ausgang


e:REAL:=0;		//Fehler
e_sum:REAL:=0;	//Fehlersumme
e_alt:REAL:=0; //Fehler N-1

Limit_oben: REAL:=0; //Obere Schranke des Ausgangssignals
Limit_unten: REAL:=0; //untere Schranke des Ausgangssignals



END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>